# Pia-Translate

./: .gitignore  BUGS.md  DEBUG_STATUS.md  setup.bat
.github/workflows/: convert-models.yml  release.yml  test-build.yml
docs/: index.html
flutter_app/: pubspec.yaml
flutter_app/android/app/: CMakeLists.txt  proguard-rules.pro
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/android/app/src/main/cpp/: sp_jni.cpp
flutter_app/android/app/src/main/kotlin/com/pia/translate/: MainActivity.kt  SentencePieceJNI.kt
flutter_app/android/app/src/main/res/xml/: data_extraction_rules.xml  network_security_config.xml
flutter_app/lib/: main.dart
flutter_app/lib/core/: config.dart  errors.dart  languages.dart
flutter_app/lib/models/: translation_record.dart
flutter_app/lib/screens/: home_screen.dart
flutter_app/lib/services/: app_logger.dart  data_collector.dart  model_manager.dart  ocr_service.dart  stt_service.dart  text_normalizer.dart  translator.dart  tts_service.dart
flutter_app/lib/state/: translate_notifier.dart
flutter_app/lib/widgets/: download_progress.dart  image_button.dart  language_bar.dart  mic_button.dart  model_manager_sheet.dart  ocr_card.dart  recognized_card.dart  result_card.dart
scripts/: convert_models.py  requirements.txt
